--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <body>
     <main class="table">
       <section class="table__header">
-        <h1>MERN TASK 3 - REACT PROJECTS</h1>
+        <h1>REACT PROJECTS</h1>
       </section>
       <section class="table__body">
         <table>
           <thead>
             <tr>
               <th>TASK NUMBER</th>
-              <th>GITHUB REPOSITORY LINK</th>
+              <th>REPOSITORY LINK</th>
               <th>DEPLOYMENT LINK</th>
             </tr>
           </thead>
