--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 >
               </td>
               <td>
-                <a href="https://react-wordcounter.vercel.app/">Click Here</a>
+                <a href="https://react-task-6-final.vercel.app/">Click Here</a>
               </td>
             </tr>
           </tbody>
